# ASSIGNMENT

ASSIGNMENT/: 1 12 123 1234.c  1.c  2.c  Addition of two complex numbers using structure.c  Boiling.c  CMakeLists.txt  Factors of a number  HCF.c  Prime or Composite.c  adding something to  file(amend)  addition function.c  average marks.c  capital or small.c  deleting an element of array  feet inches time.c  fibonacci using function.c  finding a file from directory  first 20 odd numbers.c  gcd using recursion.c  grade.c  hexagon area.c  perfect square.c  print 1 22 333 etc.c  printing all files in a directory  product.c  pyq.c  r2.c  random.c  roots of quadratic  size of floating point.c  sum of two 2d array  tree recursion.c  vowel or consonant.c
CLASSROOM/: CMakeLists.txt
untitled/: main.cpp
untitled2/: CMakeLists.txt  main.c
untitled3/: CMakeLists.txt  main.c
