cmake_minimum_required(VERSION 3.26)
project(ASSIGNMENT C)

set(CMAKE_C_STANDARD 23)

add_executable(ASSIGNMENT
        #Factorial.c
       # 2.c
       # "print 1 22 333 etc.c"
        #"Prime or Composite.c"
      #  "HCF.c"
      #  "Boiling.c"
      #  "addition function.c"
       # "fibonacci using function.c"
       # "first 20 odd numbers.c"
        #"grade.c"
        "hexagon area.c")

